# urd

./: .gitignore  Cargo.toml  LICENSE  README.md  URSCRIPT_REFERENCE.md  ZPC_FRAMEWORK_PLAN.md  build.rs  docker-compose.yml  flake.nix
config/: default_config.yaml  hw_config.yaml
config/robot/: hw.yaml  sim.yaml
examples/: python_sdk_demo.py  subscription_test.py
paths/: path.txt  three.txt  two.txt  while.txt
scripts/: start-sim.sh  stop-sim.sh  ur-init.sh  ur-workflow.sh
src/: block_executor.rs  config.rs  controller.rs  error.rs  interpreter.rs  json_output.rs  lib.rs  monitoring.rs  publisher.rs  rpc_service.rs  rtde.rs  stream.rs  telemetry.rs  urd_interface.rs  zenoh_publisher.rs
urd-core/: Cargo.toml  flake.nix
urd-core/src/: block_executor.rs  controller.rs  lib.rs  rtde.rs  service.rs
urd-zenoh/: Cargo.toml  flake.nix
urd-zenoh/src/: lib.rs  rpc_service.rs  telemetry.rs
urd_py/: README.md  __init__.py  client.py  exceptions.py  types.py
