[workspace]
members = [
    "urd-core",
    "urd-zenoh"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

# Async utilities
async-trait = "0.1"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
futures = "0.3"

# Signal handling
ctrlc = "3.0"

# Zenoh transport (only for urd-zenoh)
zenoh = { version = "=1.4", features = ["stats", "unstable"] }