[package]
name = "urd-core"
version = "0.1.0"
edition = "2021"
authors = ["URD Contributors"]
license = "MIT OR Apache-2.0"
description = "IPC-agnostic Universal Robots control library"
repository = "https://github.com/your-org/urd"
keywords = ["robotics", "universal-robots", "rtde", "urscript"]
categories = ["embedded", "api-bindings"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.0"
chrono = "0.4"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
async-trait = "0.1"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
futures = "0.3"

# NOTE: No zenoh, no networking dependencies!
# This library is pure robot control logic

[features]
default = []

# Optional features for different use cases
tracing-logs = [] # Enable structured logging
strict-validation = [] # Enable strict input validation

[lib]
name = "urd_core"
path = "src/lib.rs"