[package]
name = "urd-core"
version = "0.1.0"
edition.workspace = true
authors = ["URD Contributors"]
license = "MIT OR Apache-2.0"
description = "IPC-agnostic Universal Robots control library"
repository = "https://github.com/your-org/urd"
keywords = ["robotics", "universal-robots", "rtde", "urscript"]
categories = ["embedded", "api-bindings"]

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
regex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Async utilities
async-trait = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }

# NOTE: No zenoh, no networking dependencies!
# This library is pure robot control logic

[features]
default = []

# Optional features for different use cases
tracing-logs = [] # Enable structured logging
strict-validation = [] # Enable strict input validation

[lib]
name = "urd_core"
path = "src/lib.rs"