[package]
name = "urd-zenoh"
version = "0.1.0"
edition = "2021"
authors = ["URD Contributors"]
license = "MIT OR Apache-2.0"
description = "Zenoh transport wrapper for URD Core"
repository = "https://github.com/your-org/urd"
keywords = ["robotics", "universal-robots", "zenoh", "rpc"]
categories = ["api-bindings", "network-programming"]

[dependencies]
# Core robot control (IPC-agnostic)
urd-core = { path = "../urd-core" }

# Zenoh transport
zenoh = { version = "=1.4", features = ["stats", "unstable"] }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Signal handling
ctrlc = "3.0"

[features]
default = []

[lib]
name = "urd_zenoh"
path = "src/lib.rs"

[[bin]]
name = "urd"
path = "src/bin/urd.rs"

[[bin]]
name = "urd_cli"
path = "src/bin/urd_cli.rs"