[package]
name = "urd-zenoh"
version = "0.1.0"
edition.workspace = true
authors = ["URD Contributors"]
license = "MIT OR Apache-2.0"
description = "Zenoh transport wrapper for URD Core"
repository = "https://github.com/your-org/urd"
keywords = ["robotics", "universal-robots", "zenoh", "rpc"]
categories = ["api-bindings", "network-programming"]

[dependencies]
# Core robot control (IPC-agnostic)
urd-core = { path = "../urd-core" }

# Zenoh transport
zenoh = { workspace = true }

# Core async runtime
tokio = { workspace = true }

# Serialization  
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Signal handling
ctrlc = { workspace = true }

[features]
default = []

[lib]
name = "urd_zenoh"
path = "src/lib.rs"

[[bin]]
name = "urd"
path = "src/bin/urd.rs"

[[bin]]
name = "urd_cli"
path = "src/bin/urd_cli.rs"